Java 9 cage breaker